fix(neoforge/fancy_mod_loader): correct the hooks to avoid crash